references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/BindingConnector_Invalid2.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:8d24ff1db2e6cd9b4d1f4832cd1095d1b36a33a62632cc7b4ab0cb72c189876e
size 1552
